--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 node_modules
 package-lock.json
 public
-callback.php
-mail.php
+/source/callback.php
+/source/mail.php
 
 # Winodws image file caches
 Thumbs.db
